--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_height="0dp"
         android:layout_weight="15"
         android:orientation="vertical"
-        android:visibility="gone">
+        android:visibility="gone"
+        tools:visibility="gone">
         <!-- 头部 -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,19 +95,87 @@
     </LinearLayout>
 
     <!-- 我的 -->
+
+    <!-- 底部 -->
     <LinearLayout
         android:id="@+id/showMy"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="15"
+        android:background="#E6E6E6"
         android:orientation="vertical"
         android:visibility="visible">
 
+        <!-- 存放头像 昵称以及设置 -->
+
+        <!--        头像栏占70dp-->
+        <!--        经验值栏占150dp 其中等级占90dp，经验值占60dp-->
+
+        <!--圆角view-->
+        <!--cardElevation设置阴影大小 -->
+        <!--cardUseCompatPadding true会额外设置阴影 -->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="150dp"
+            android:layout_marginTop="70dp"
+            app:cardBackgroundColor="#424858"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp"
+            app:cardUseCompatPadding="false">
+            <!--            当前等级layout-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="90dp"
+                android:layout_gravity="top"
+                android:orientation="vertical">
+                <!--                等级文字-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="黄金会员"
+                    android:textColor="#ffff00"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
+                <!--                提示小文字-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="10dp"
+                    android:text="下单即可获得经验值，赶快升级吧"
+                    android:textColor="#aaaaaa"
+                    android:textSize="10sp"
+
+                    />
+            </LinearLayout>
+
+
+            <!--            经验值layout-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_gravity="bottom"
+                android:background="#3A4265">
+                <!--                经验值文字-->
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="20dp"
+                    android:text="经验值"
+                    android:textColor="#ffffff"
+                    android:textSize="18dp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
 
     </LinearLayout>
 
-    <!-- 底部 -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
