--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,8 +13,8 @@
         android:layout_height="0dp"
         android:layout_weight="15"
         android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="gone">
+        android:visibility="visible"
+        tools:visibility="visible">
         <!-- 头部 -->
         <LinearLayout
             android:layout_width="match_parent"
@@ -104,11 +104,52 @@
         android:layout_weight="15"
         android:background="#E6E6E6"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="gone"
+        tools:visibility="gone">
 
         <!-- 存放头像 昵称以及设置 -->
-
         <!--        头像栏占70dp-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:orientation="horizontal">
+
+            <!--            头像-->
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="5dp"
+                android:layout_weight="1"
+                android:src="@drawable/rose" />
+
+            <!--            昵称-->
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_weight="4"
+                android:text="默认用户"
+                android:textColor="#050505"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+
+            <!--            设置-->
+            <ImageView
+                android:layout_width="0dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="5dp"
+                android:layout_weight="1"
+                android:src="@drawable/config" />
+
+        </LinearLayout>
+
+
         <!--        经验值栏占150dp 其中等级占90dp，经验值占60dp-->
 
         <!--圆角view-->
@@ -117,7 +158,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="150dp"
-            android:layout_marginTop="70dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
             app:cardBackgroundColor="#424858"
             app:cardCornerRadius="15dp"
             app:cardElevation="0dp"
@@ -130,6 +173,7 @@
                 android:orientation="vertical">
                 <!--                等级文字-->
                 <TextView
+                    android:id="@+id/tv_vip"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
@@ -144,7 +188,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="bottom"
                     android:layout_marginLeft="20dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="5dp"
                     android:text="下单即可获得经验值，赶快升级吧"
                     android:textColor="#aaaaaa"
                     android:textSize="10sp"
@@ -173,41 +217,76 @@
 
         </androidx.cardview.widget.CardView>
 
+        <!--        我的关注-->
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            app:cardBackgroundColor="#ffffff"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="0dp"
+            app:cardUseCompatPadding="false">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <TextView
+                    android:id="@+id/tv_subscribed_shop"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#d0d0d0"
+                    android:gravity="center"
+                    android:text="关注店铺"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+            </LinearLayout>
+
+        </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        tools:visibility="visible">
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center" >
+            android:gravity="center">
 
             <ImageView
                 android:id="@+id/HomePage"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/home_button2"
-                />
+                android:src="@drawable/home_button2" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="center"
-            android:text="订单" >
+            android:text="订单">
 
             <ImageView
                 android:id="@+id/indent"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/indent_button1"
-                />
+                android:src="@drawable/indent_button1" />
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -218,8 +297,7 @@
                 android:id="@+id/My"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/my_button1"
-                />
+                android:src="@drawable/my_button1" />
         </LinearLayout>
 
     </LinearLayout>
